# AR_Glasses

./: .gitignore  Clawdbot.md  MIGRATION_NOTES.md  QUICKSTART.md  README.md  Todo.md  app.py  app_complex.py  app_simple.py  check_audio_devices.py  check_dependencies.py  conference-template-a4 fixed.odt  demo_wakeword.py  lore.md  pyproject.toml  req.txt  requirements.txt  start_gateway.bat  start_gateway.py  start_gateway.sh  start_streamlit.bat  start_streamlit.sh  test_mcp_server.py  test_microphone.py  test_server_direct.py  test_transcription_direct.py  test_wakeword_quick.py
Assets/: GameManagerBehavior.cs  Mat_Clear.mat  PlayerMovement.cs  collision.unity  floor.mat  purpleCube.prefab
Comp_Analysis/: Comp_analysis copy.ipynb  Comp_analysis.ipynb  Our_Features.md  Project Report.md
Computer_Vision/: yolo.py
GPS_Navigation/: Android.py  Floor_planning.py
LLM/: LLM.py  LLM_CPU.py
MCP_Server/: Server copy.py  Server.py
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Temp/: Graduation Project Documentation.docx  Project.txt  Smart_Glasses_Specifications.docx  all modules.docx  docx.py  md.md
Tests/: test_empty_transcription.py  test_nav.py  test_transcription_debug.py  test_whisper_model.py
Text_to_speech/: TTP.py  Test.txt  TestAr.txt
agent/: agent_loop.py  api_llm.py  llm.py  modes.py
audio_recorder_component/: __init__.py
config/: model_config.py  settings.old.py  settings.py
models/: requests.py
old/: client.py
server/: gateway.py  server.py
shared/: utils.py
smart_home_app/: App.js  app.json  (+2 more)
(+297 files in other folders)
